--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     
     <style>
       .fullscreenDiv {
-        background-color: 'limegreen';
+        background-color: limegreen;
         width: 100%;
         height: auto;
         bottom: 0px;
