--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,7 @@
         justify-content: center;
       }
       .restaurant {
-        background-color: #00a8f7;
+        background-color: limegreen;
         border-radius: 10px;
         padding: 5px;
         height: auto;
