--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
         position: absolute;
       }
       .restaurantsDiv {
-        background-color: #ffffff;
+        background-color: limegreen;
         width: 100%;
         height: auto;
       }
